@@ -8,76 +8,73 @@ from click.testing import CliRunner
 from fiona.fio.main import main_group
 from fiona.fio import cat
 
-DATA_DIR = os.path.join('tests', 'data')
-WILDSHP = os.path.join(DATA_DIR, 'coutwildrnp.shp')
 
-
-def test_one():
+def test_one(path_coutwildrnp_shp):
     runner = CliRunner()
-    result = runner.invoke(main_group, ['cat', WILDSHP])
+    result = runner.invoke(main_group, ['cat', path_coutwildrnp_shp])
     assert result.exit_code == 0
     assert result.output.count('"Feature"') == 67
 
 
-def test_two():
+def test_two(path_coutwildrnp_shp):
     runner = CliRunner()
-    result = runner.invoke(main_group, ['cat', WILDSHP, WILDSHP])
+    result = runner.invoke(main_group, ['cat', path_coutwildrnp_shp, path_coutwildrnp_shp])
     assert result.exit_code == 0
     assert result.output.count('"Feature"') == 134
 
 
-def test_bbox_no():
+def test_bbox_no(path_coutwildrnp_shp):
     runner = CliRunner()
     result = runner.invoke(
         main_group,
-        ['cat', WILDSHP, '--bbox', '0,10,80,20'],
+        ['cat', path_coutwildrnp_shp, '--bbox', '0,10,80,20'],
         catch_exceptions=False)
     assert result.exit_code == 0
     assert result.output == ""
 
 
-def test_bbox_yes():
+def test_bbox_yes(path_coutwildrnp_shp):
     runner = CliRunner()
     result = runner.invoke(
         main_group,
-        ['cat', WILDSHP, '--bbox', '-109,37,-107,39'],
+        ['cat', path_coutwildrnp_shp, '--bbox', '-109,37,-107,39'],
         catch_exceptions=False)
     assert result.exit_code == 0
     assert result.output.count('"Feature"') == 19
 
 
-def test_bbox_yes_two_files():
+def test_bbox_yes_two_files(path_coutwildrnp_shp):
     runner = CliRunner()
     result = runner.invoke(
         main_group,
-        ['cat', WILDSHP, WILDSHP, '--bbox', '-109,37,-107,39'],
+        ['cat', path_coutwildrnp_shp, path_coutwildrnp_shp, '--bbox', '-109,37,-107,39'],
         catch_exceptions=False)
     assert result.exit_code == 0
     assert result.output.count('"Feature"') == 38
 
 
-def test_bbox_json_yes():
+def test_bbox_json_yes(path_coutwildrnp_shp):
     runner = CliRunner()
     result = runner.invoke(
         main_group,
-        ['cat', WILDSHP, '--bbox', '[-109,37,-107,39]'],
+        ['cat', path_coutwildrnp_shp, '--bbox', '[-109,37,-107,39]'],
         catch_exceptions=False)
     assert result.exit_code == 0
     assert result.output.count('"Feature"') == 19
 
 
-def test_multi_layer():
+def test_multi_layer(data_dir):
     layerdef = "1:coutwildrnp,1:coutwildrnp"
     runner = CliRunner()
     result = runner.invoke(
-        main_group, ['cat', '--layer', layerdef, DATA_DIR])
+        main_group, ['cat', '--layer', layerdef, data_dir])
     assert result.output.count('"Feature"') == 134
 
 
-def test_multi_layer_fail():
+def test_multi_layer_fail(data_dir):
     runner = CliRunner()
     result = runner.invoke(main_group, ['cat', '--layer', '200000:coutlildrnp',
-                           DATA_DIR])
+                           data_dir])
     assert result.exit_code != 0
 
 
